ingress-multiapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order
  labels:
    app: order   
spec:
  rules:
    - http:
        paths:
          - path: /order
            pathType: Exact
            backend:
              service:
                name:  order-svc
                port:
                  number: 8080
          - path: /neworder
            pathType: Exact
            backend:
              service:
                name:  neworder-svc
                port:
                  number: 8080
